...
// RNTester App currently uses in memory storage for storing navigation state

// On iOS, the tabs are native, see RNTesterTabsIOS/ios/RNTesterTabsIOSComponentView.mm
const IOS_TABS = [
  {
    key: Screens.COMPONENTS,
    title: 'Components',
    systemImage: 'square.stack.3d.up',
    testID: 'components-tab',
  },
  {
    key: Screens.APIS,
    title: 'APIs',
...
