...

const DATA = Array.from({length: 20}, (_, index) => `Item ${index}`);
const SCROLL_TO_ITEM = DATA[18];

type EventCounts = {
  dragEvents: number,
  onEndReached: number,
  onMomentumScrollEnd: number,
  onStartReached: number,
};

export component FlatList_onEndReached() {
  const [output, setOutput] = useState('ready');
...
